@@ -4,8 +4,19 @@ import fr.nocsy.mcpets.data.Category;
 import fr.nocsy.mcpets.data.Items;
 import fr.nocsy.mcpets.data.Pet;
 import fr.nocsy.mcpets.data.PetSkin;
-import fr.nocsy.mcpets.data.config.*;
-import fr.nocsy.mcpets.data.editor.*;
+import fr.nocsy.mcpets.data.config.AbstractConfig;
+import fr.nocsy.mcpets.data.config.CategoryConfig;
+import fr.nocsy.mcpets.data.config.ItemsListConfig;
+import fr.nocsy.mcpets.data.config.PetConfig;
+import fr.nocsy.mcpets.data.config.PetFoodConfig;
+import fr.nocsy.mcpets.data.editor.Editor;
+import fr.nocsy.mcpets.data.editor.EditorConversation;
+import fr.nocsy.mcpets.data.editor.EditorEditing;
+import fr.nocsy.mcpets.data.editor.EditorExpectationType;
+import fr.nocsy.mcpets.data.editor.EditorItems;
+import fr.nocsy.mcpets.data.editor.EditorPageSelection;
+import fr.nocsy.mcpets.data.editor.EditorState;
+import fr.nocsy.mcpets.data.inventories.PetInventoryHolder;
 import fr.nocsy.mcpets.data.livingpets.PetFood;
 import fr.nocsy.mcpets.data.livingpets.PetLevel;
 import fr.nocsy.mcpets.utils.debug.Debugger;
@@ -23,14 +34,14 @@ import java.util.UUID;
 public class EditorGlobalListener implements Listener {
 
     @EventHandler
-    public void diveInMenus(InventoryClickEvent e) {
-        Player p = (Player) e.getWhoClicked();
-        ItemStack it = e.getCurrentItem();
-        EditorItems editorItem = EditorItems.getFromItemstack(it);
+    public void diveInMenus(final InventoryClickEvent e) {
+        final Player p = (Player) e.getWhoClicked();
+        final ItemStack it = e.getCurrentItem();
+        final EditorItems editorItem = EditorItems.getFromItemstack(it);
 
         if (editorItem != null) {
             e.setCancelled(true);
-            Editor editor = Editor.getEditor(p);
+            final Editor editor = Editor.getEditor(p);
 
             // if the item has a next state, just keep going in the menus
             if (editorItem.getNextState() != null) {
@@ -42,14 +53,16 @@ public class EditorGlobalListener implements Listener {
     }
 
     @EventHandler
-    public void editorItemsClick(InventoryClickEvent e) {
-        Player p = (Player) e.getWhoClicked();
-        ItemStack it = e.getCurrentItem();
-        EditorItems editorItem = EditorItems.getFromItemstack(it);
+    public void editorItemsClick(final InventoryClickEvent e) {
+        final Player p = (Player) e.getWhoClicked();
+        final ItemStack it = e.getCurrentItem();
+        final EditorItems editorItem = EditorItems.getFromItemstack(it);
 
-        if (editorItem != null) {
+        if (editorItem != null && e.getClickedInventory() != null
+                && e.getClickedInventory().getHolder() instanceof final PetInventoryHolder holder
+                && holder.getType() == PetInventoryHolder.Type.EDITOR_MENU) {
 
-            Editor editor = Editor.getEditor(p);
+            final Editor editor = Editor.getEditor(p);
 
             e.setCancelled(true);
             // If it has no type, do nothing
@@ -87,13 +100,13 @@ public class EditorGlobalListener implements Listener {
 
             // If it's a pet icon, then we dive in the pet editing
             else if (editorItem.getType().equals(EditorExpectationType.PET)) {
-                int slot = e.getSlot();
-                Pet pet = Pet.getObjectPets().get(slot + 45 * EditorPageSelection.get(p));
+                final int slot = e.getSlot();
+                final Pet pet = Pet.getObjectPets().get(slot + 45 * EditorPageSelection.get(p));
                 if (pet == null) {
                     Debugger.send("§cPet could not be found.");
                     return;
                 }
-                EditorEditing editing = EditorEditing.get(p);
+                final EditorEditing editing = EditorEditing.get(p);
                 editing.setPetId(pet.getId());
                 editor.setState(EditorState.PET_EDITOR_EDIT);
                 editor.openEditor();
@@ -101,7 +114,7 @@ public class EditorGlobalListener implements Listener {
 
             // If we should delete the pet
             else if (editorItem.getType().equals(EditorExpectationType.PET_DELETE)) {
-                Pet pet = PetConfig.loadConfigPet(EditorEditing.get(p).getPetId());
+                final Pet pet = PetConfig.loadConfigPet(EditorEditing.get(p).getPetId());
                 if (pet == null) {
                     Debugger.send("§cPet could not be found.");
                     return;
@@ -119,15 +132,15 @@ public class EditorGlobalListener implements Listener {
 
             // If we should edit a pet level
             else if (editorItem.getType().equals(EditorExpectationType.PET_LEVEL_EDIT)) {
-                EditorEditing editorPet = EditorEditing.get(p);
-                Pet pet = PetConfig.loadConfigPet(editorPet.getPetId());
+                final EditorEditing editorPet = EditorEditing.get(p);
+                final Pet pet = PetConfig.loadConfigPet(editorPet.getPetId());
                 if (pet == null) {
                     Debugger.send("§cPet could not be found.");
                     return;
                 }
-                PetLevel level = PetConfig.loadConfigPet(editorPet.getPetId()).getPetLevels().stream()
-                                        .filter(petLevel -> petLevel.getLevelId().equals(editorPet.getEditorMapping().get(e.getSlot())))
-                                        .findFirst().orElse(null);
+                final PetLevel level = PetConfig.loadConfigPet(editorPet.getPetId()).getPetLevels().stream()
+                        .filter(petLevel -> petLevel.getLevelId().equals(editorPet.getEditorMapping().get(e.getSlot())))
+                        .findFirst().orElse(null);
 
                 editorPet.setMappedId(level.getLevelId());
                 editor.setState(EditorState.PET_EDITOR_LEVEL_EDIT);
@@ -136,15 +149,15 @@ public class EditorGlobalListener implements Listener {
 
             // If we should create a pet level
             else if (editorItem.getType().equals(EditorExpectationType.PET_LEVEL_CREATE)) {
-                EditorEditing editorPet = EditorEditing.get(p);
-                Pet pet = PetConfig.loadConfigPet(editorPet.getPetId());
+                final EditorEditing editorPet = EditorEditing.get(p);
+                final Pet pet = PetConfig.loadConfigPet(editorPet.getPetId());
                 if (pet == null) {
                     Debugger.send("§cPet could not be found.");
                     return;
                 }
-                PetConfig config = PetConfig.getConfig(pet.getId());
+                final PetConfig config = PetConfig.getConfig(pet.getId());
                 config.registerCleanPetLevel(null);
-                PetLevel level = pet.getPetLevels().get(pet.getPetLevels().size() - 1);
+                final PetLevel level = pet.getPetLevels().getLast();
 
                 editorPet.setMappedId(level.getLevelId());
                 editor.setState(EditorState.PET_EDITOR_LEVEL_EDIT);
@@ -153,17 +166,17 @@ public class EditorGlobalListener implements Listener {
 
             // If we should delete a pet level
             else if (editorItem.getType().equals(EditorExpectationType.PET_LEVEL_DELETE)) {
-                EditorEditing editorPet = EditorEditing.get(p);
-                Pet pet = PetConfig.loadConfigPet(editorPet.getPetId());
+                final EditorEditing editorPet = EditorEditing.get(p);
+                final Pet pet = PetConfig.loadConfigPet(editorPet.getPetId());
                 if (pet == null) {
                     Debugger.send("§cPet could not be found.");
                     return;
                 }
-                PetLevel level = PetConfig.loadConfigPet(editorPet.getPetId()).getPetLevels().stream()
+                final PetLevel level = PetConfig.loadConfigPet(editorPet.getPetId()).getPetLevels().stream()
                         .filter(petLevel -> petLevel.getLevelId().equals(editorPet.getMappedId()))
                         .findFirst().orElse(null);
 
-                PetConfig config = PetConfig.getConfig(pet.getId());
+                final PetConfig config = PetConfig.getConfig(pet.getId());
                 config.deletePetLevel(level.getLevelId());
 
                 editor.setState(EditorState.PET_EDITOR_LEVELS);
@@ -172,16 +185,16 @@ public class EditorGlobalListener implements Listener {
 
             // If we should edit a pet skin
             else if (editorItem.getType().equals(EditorExpectationType.PET_SKIN_EDIT)) {
-                EditorEditing editorPet = EditorEditing.get(p);
-                Pet pet = PetConfig.loadConfigPet(editorPet.getPetId());
+                final EditorEditing editorPet = EditorEditing.get(p);
+                final Pet pet = PetConfig.loadConfigPet(editorPet.getPetId());
                 if (pet == null) {
                     Debugger.send("§cPet could not be found.");
                     return;
                 }
-                int slotMapping = e.getSlot();
-                PetSkin skin = PetSkin.getSkins(pet).stream()
-                                                    .filter(petSkin -> petSkin.getPathId().equals(editorPet.getEditorMapping().get(slotMapping)))
-                                                    .findFirst().orElse(null);
+                final int slotMapping = e.getSlot();
+                final PetSkin skin = PetSkin.getSkins(pet).stream()
+                        .filter(petSkin -> petSkin.getPathId().equals(editorPet.getEditorMapping().get(slotMapping)))
+                        .findFirst().orElse(null);
 
                 editorPet.setMappedId(skin.getPathId());
                 editor.setState(EditorState.PET_EDITOR_SKIN_EDIT);
@@ -190,16 +203,16 @@ public class EditorGlobalListener implements Listener {
 
             // If we should create a pet skin
             else if (editorItem.getType().equals(EditorExpectationType.PET_SKIN_CREATE)) {
-                EditorEditing editorPet = EditorEditing.get(p);
-                Pet pet = PetConfig.loadConfigPet(editorPet.getPetId());
+                final EditorEditing editorPet = EditorEditing.get(p);
+                final Pet pet = PetConfig.loadConfigPet(editorPet.getPetId());
                 if (pet == null) {
                     Debugger.send("§cPet could not be found.");
                     return;
                 }
-                PetConfig config = PetConfig.getConfig(pet.getId());
+                final PetConfig config = PetConfig.getConfig(pet.getId());
                 config.registerCleanPetSkin();
-                List<PetSkin> skins = PetSkin.getSkins(pet);
-                PetSkin skin = skins.get(skins.size()-1);
+                final List<PetSkin> skins = PetSkin.getSkins(pet);
+                final PetSkin skin = skins.getLast();
 
                 editorPet.setMappedId(skin.getPathId());
                 editor.setState(EditorState.PET_EDITOR_SKIN_EDIT);
@@ -208,13 +221,13 @@ public class EditorGlobalListener implements Listener {
 
             // If we should delete a pet skin
             else if (editorItem.getType().equals(EditorExpectationType.PET_SKIN_DELETE)) {
-                EditorEditing editorPet = EditorEditing.get(p);
-                Pet pet = PetConfig.loadConfigPet(editorPet.getPetId());
+                final EditorEditing editorPet = EditorEditing.get(p);
+                final Pet pet = PetConfig.loadConfigPet(editorPet.getPetId());
                 if (pet == null) {
                     Debugger.send("§cPet could not be found.");
                     return;
                 }
-                PetConfig config = PetConfig.getConfig(pet.getId());
+                final PetConfig config = PetConfig.getConfig(pet.getId());
                 config.deletePetSkin(editorPet.getMappedId());
 
                 editor.setState(EditorState.PET_EDITOR_SKINS);
@@ -223,7 +236,7 @@ public class EditorGlobalListener implements Listener {
 
             // If it's an item, we need to serialize it
             else if (editorItem.getType().equals(EditorExpectationType.ITEM)) {
-                ItemStack replaceItem = e.getCursor();
+                final ItemStack replaceItem = e.getCursor();
                 if (replaceItem == null || replaceItem.getType().isAir())
                     return;
                 if (!replaceItem.hasItemMeta())
@@ -245,13 +258,13 @@ public class EditorGlobalListener implements Listener {
 
             // If we should delete a category
             else if (editorItem.getType().equals(EditorExpectationType.CATEGORY_DELETE)) {
-                EditorEditing editing = EditorEditing.get(p);
-                Category category = CategoryConfig.loadConfigCategory(editing.getMappedId());
+                final EditorEditing editing = EditorEditing.get(p);
+                final Category category = CategoryConfig.loadConfigCategory(editing.getMappedId());
                 if (category == null) {
                     Debugger.send("§cCategory could not be found.");
                     return;
                 }
-                CategoryConfig config = CategoryConfig.getMapping().get(category.getId());
+                final CategoryConfig config = CategoryConfig.getMapping().get(category.getId());
                 config.delete();
 
                 CategoryConfig.load(AbstractConfig.getPath() + "Categories/", true);
@@ -261,8 +274,8 @@ public class EditorGlobalListener implements Listener {
 
             // If we should edit a category
             else if (editorItem.getType().equals(EditorExpectationType.CATEGORY_EDIT)) {
-                EditorEditing editing = EditorEditing.get(p);
-                Category category = CategoryConfig.loadConfigCategory(editing.getEditorMapping().get(e.getSlot()));
+                final EditorEditing editing = EditorEditing.get(p);
+                final Category category = CategoryConfig.loadConfigCategory(editing.getEditorMapping().get(e.getSlot()));
                 if (category == null) {
                     Debugger.send("§cCategory could not be found.");
                     return;
@@ -274,9 +287,9 @@ public class EditorGlobalListener implements Listener {
 
             // If we should create an item
             else if (editorItem.getType().equals(EditorExpectationType.ITEM_CREATE)) {
-                EditorEditing editing = EditorEditing.get(p);
+                final EditorEditing editing = EditorEditing.get(p);
 
-                String key = UUID.randomUUID().toString();
+                final String key = UUID.randomUUID().toString();
                 ItemsListConfig.getInstance().setItemStack(key, Items.UNKNOWN.getItem().clone());
                 ItemsListConfig.getInstance().reload();
 
@@ -287,9 +300,9 @@ public class EditorGlobalListener implements Listener {
 
             // If we should edit an item
             else if (editorItem.getType().equals(EditorExpectationType.ITEM_EDIT)) {
-                EditorEditing editing = EditorEditing.get(p);
-                String itemId = editing.getEditorMapping().get(e.getSlot());
-                ItemStack item = ItemsListConfig.getInstance().getItemStack(itemId);
+                final EditorEditing editing = EditorEditing.get(p);
+                final String itemId = editing.getEditorMapping().get(e.getSlot());
+                final ItemStack item = ItemsListConfig.getInstance().getItemStack(itemId);
                 if (item == null) {
                     Debugger.send("§cItem could not be found.");
                     return;
@@ -302,8 +315,8 @@ public class EditorGlobalListener implements Listener {
             // If we should delete an item
             else if (editorItem.getType().equals(EditorExpectationType.ITEM_DELETE)) {
 
-                EditorEditing editing = EditorEditing.get(p);
-                String itemId = editing.getMappedId();
+                final EditorEditing editing = EditorEditing.get(p);
+                final String itemId = editing.getMappedId();
                 ItemsListConfig.getInstance().removeItemStack(itemId);
 
                 editor.setState(EditorState.ITEM_EDITOR);
@@ -312,9 +325,9 @@ public class EditorGlobalListener implements Listener {
 
             // If we should create an item
             else if (editorItem.getType().equals(EditorExpectationType.PETFOOD_CREATE)) {
-                EditorEditing editing = EditorEditing.get(p);
+                final EditorEditing editing = EditorEditing.get(p);
 
-                String key = PetFoodConfig.getInstance().registerCleanPetfood();
+                final String key = PetFoodConfig.getInstance().registerCleanPetfood();
 
                 editing.setMappedId(PetFood.getFromId(key).getId());
                 editor.setState(EditorState.PETFOOD_EDITOR_EDIT);
@@ -323,9 +336,9 @@ public class EditorGlobalListener implements Listener {
 
             // If we should edit a petfood
             else if (editorItem.getType().equals(EditorExpectationType.PETFOOD_EDIT)) {
-                EditorEditing editing = EditorEditing.get(p);
-                String petFoodId = editing.getEditorMapping().get(e.getSlot());
-                PetFood petFood = PetFoodConfig.loadConfigPetFood(petFoodId);
+                final EditorEditing editing = EditorEditing.get(p);
+                final String petFoodId = editing.getEditorMapping().get(e.getSlot());
+                final PetFood petFood = PetFoodConfig.loadConfigPetFood(petFoodId);
                 if (petFood == null) {
                     Debugger.send("§cPetfood could not be found.");
                     return;
@@ -337,8 +350,8 @@ public class EditorGlobalListener implements Listener {
 
             // If we should delete an item
             else if (editorItem.getType().equals(EditorExpectationType.PETFOOD_DELETE)) {
-                EditorEditing editing = EditorEditing.get(p);
-                PetFood petFood = PetFoodConfig.loadConfigPetFood(editing.getMappedId());
+                final EditorEditing editing = EditorEditing.get(p);
+                final PetFood petFood = PetFoodConfig.loadConfigPetFood(editing.getMappedId());
                 PetFoodConfig.getInstance().removePetFood(petFood.getId());
 
                 editor.setState(EditorState.PETFOOD_EDITOR);
@@ -347,7 +360,7 @@ public class EditorGlobalListener implements Listener {
 
             // If it's more advanced, it needs typing, so starts a conversation!
             else {
-                EditorConversation conversation = new EditorConversation(p, editorItem);
+                final EditorConversation conversation = new EditorConversation(p, editorItem);
                 conversation.start();
                 p.closeInventory();
             }
@@ -359,7 +372,7 @@ public class EditorGlobalListener implements Listener {
 
     }
 
-    private boolean resetFeature(InventoryClickEvent e, Editor editor, EditorItems editorItem, Player p) {
+    private boolean resetFeature(final InventoryClickEvent e, final Editor editor, final EditorItems editorItem, final Player p) {
         // Reset the edited feature
         if (e.getClick() == ClickType.SHIFT_LEFT && editorItem.isResetable()) {
             editorItem.setValue(EditorItems.RESET_VALUE_TAG);
@@ -373,7 +386,7 @@ public class EditorGlobalListener implements Listener {
     }
 
     @EventHandler
-    private void refreshEditor(PlayerQuitEvent e) {
+    private void refreshEditor(final PlayerQuitEvent e) {
         Editor.refreshEditor(e.getPlayer());
     }
 }
